# EvaDentalAI_Yolo

./: .gitignore  COLAB_DENTEX_FIXED.md  COLAB_DENTEX_QUICKSTART.md  COLAB_FIX_GUIDE.md  COLAB_GUIDE_FINAL.md  COLAB_GUIDE_FIXED.md  COLAB_PATH_FIX_README.md  COLAB_SCRIPT_FINAL.md  DENTEX_GUIDE.md  EvaDentalAI_DENTEX_Colab.ipynb  LOCAL_QUICKSTART.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TEST_LOCAL.md  colab_dentex_final.py  colab_dentex_fixed.py  colab_dentex_fixed_v2.py  colab_dentex_simple.py  colab_final_fixed.py  colab_path_test.py  colab_quick_test.py  colab_simple_working.py  colab_verify.py  demo.py  demo_dentex.py  fix_colab_paths.py  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  setup.py  test_colab_fix.py  test_local.py  test_nested_fix.py  test_setup.py
api/: main.py
config/: data.yaml
docker/: Dockerfile  docker-compose.yml  nginx.conf
docs/: DENTEX_DATASET.md  GOOGLE_COLAB.md  INSTALLATION.md  USAGE.md
examples/: example_usage.py
scripts/: download_dentex_dataset.py  download_dentex_simple.py  export_model.py  predict.py  prepare_dataset.py  run_training.bat  run_training.sh  train_model.py
tests/: test_api.py  test_basic.py  test_benchmark.py  test_compatibility.py  test_cross_validation.py  test_integration.py  test_load.py  test_performance.py  test_regression.py  test_security.py  test_stress.py  test_validation.py  test_validation_cross.py
